--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="img/logo.png" alt="Logo GEJiF" class="logo" style="height: 50px;">
+            <img src="logo.png" alt="Logo GEJiF" class="logo" style="height: 50px;">
             <h1>JOGOS IF BAIANO</h1>
             <input type="text" placeholder="Pesquisar..." class="search-bar">
         </div>
@@ -20,51 +20,51 @@
     <main>
         <div class="game-list">
             <div class="game-card">
-                <img src="img/dg.jpg" alt="Dalton's Game">
+                <img src="dg.jpg" alt="Dalton's Game">
                 <h3>Dalton's Game</h3>
                 <div><img src alt=""></div>
                 <p>Educativo • Grátis • há 3 meses</p>
                 <a href="https://play.google.com/store/apps/details?id=com.Shooter.DaltonsGame&pcampaignid=web_share"><img src="img/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="img/mmn.png" alt="Milenyum Math Navigator">
+                <img src="mmn.png" alt="Milenyum Math Navigator">
                 <h3>Milenyum Math Navigator</h3>
                 <p>Educativo • Grátis • há 3 meses</p>
                 <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MilenyumMathNavigator&pcampaignid=web_share"><img src="img/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="img/gss.png" alt="Geometric Shapes In Space">
+                <img src="gss.png" alt="Geometric Shapes In Space">
                 <h3>Geometric Shapes In Space</h3>
                 <p>Educativo • Grátis • há 3 meses</p>
                 <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.GeometricShapesInSpace&pcampaignid=web_share"><img src="img/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="img/njs.jpg" alt="Neon - Jogo de Soma">
+                <img src="njs.jpg" alt="Neon - Jogo de Soma">
                 <h3>Neon - Jogo de Soma</h3>
                 <p>Educativo • Grátis • há 4 meses</p>
                 <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share"><img src="img/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="img/ne.png" alt="Números nas Estrelas">
+                <img src="ne.png" alt="Números nas Estrelas">
                 <h3>Números nas Estrelas</h3>
                 <p>Educativo • Grátis • há 4 meses</p>
                 <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.NUMEROSNASESTRELAS&pcampaignid=web_share    "><img src="img/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="img/gm.png" alt="GamaMath">
+                <img src="gm.png" alt="GamaMath">
                 <h3>GamaMath</h3>
                 <div><img src alt=""></div>
                 <p>Educativo • Grátis • há 8 anos</p>
                 <a href="https://play.google.com/store/apps/details?id=com.GamaCompany.GamaMath&pcampaignid=web_share"><img src="img/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="img/eg.png" alt="Elementos Geométricos">
+                <img src="eg.png" alt="Elementos Geométricos">
                 <h3>Elementos Geométricos</h3>
                 <p>Educativo • Grátis • há 8 anos</p>
                 <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.ElementosGeometricosria&pcampaignid=web_share"><img src="img/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="img/ov.jpg" alt="Oxe e as Vogais">
+                <img src="ov.jpg" alt="Oxe e as Vogais">
                 <h3>Oxe e as Vogais</h3>
                 <div><img src alt=""></div>
                 <p>Educativo • Grátis • há 8 anos</p>
@@ -78,7 +78,7 @@
     <h3 style="text-align: center;">Grupo de Estudo de Jogos </h3>
   <li>
     <a href="https://www.instagram.com/gejif_ifbaiano">
-      <img src="img/instagramlogo.png" width="30" height="30" alt="Instagram">
+      <img src="instagramlogo.png" width="30" height="30" alt="Instagram">
     </a>
   </li>
 </ol>   
