--- a/index.html
+++ b/index.html
@@ -24,51 +24,51 @@
                 <h3>Dalton's Game</h3>
                 <div><img src alt=""></div>
                 <p>Educativo • Grátis • há 3 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.Shooter.DaltonsGame&pcampaignid=web_share"><img src="img/googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.Shooter.DaltonsGame&pcampaignid=web_share"><img src="googleplay.png"></a>
             </div>
             <div class="game-card">
                 <img src="mmn.png" alt="Milenyum Math Navigator">
                 <h3>Milenyum Math Navigator</h3>
                 <p>Educativo • Grátis • há 3 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MilenyumMathNavigator&pcampaignid=web_share"><img src="img/googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MilenyumMathNavigator&pcampaignid=web_share"><img src="googleplay.png"></a>
             </div>
             <div class="game-card">
                 <img src="gss.png" alt="Geometric Shapes In Space">
                 <h3>Geometric Shapes In Space</h3>
                 <p>Educativo • Grátis • há 3 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.GeometricShapesInSpace&pcampaignid=web_share"><img src="img/googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.GeometricShapesInSpace&pcampaignid=web_share"><img src="googleplay.png"></a>
             </div>
             <div class="game-card">
                 <img src="njs.jpg" alt="Neon - Jogo de Soma">
                 <h3>Neon - Jogo de Soma</h3>
                 <p>Educativo • Grátis • há 4 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share"><img src="img/googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share"><img src="googleplay.png"></a>
             </div>
             <div class="game-card">
                 <img src="ne.png" alt="Números nas Estrelas">
                 <h3>Números nas Estrelas</h3>
                 <p>Educativo • Grátis • há 4 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.NUMEROSNASESTRELAS&pcampaignid=web_share    "><img src="img/googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.NUMEROSNASESTRELAS&pcampaignid=web_share"><img src="googleplay.png"></a>
             </div>
             <div class="game-card">
                 <img src="gm.png" alt="GamaMath">
                 <h3>GamaMath</h3>
                 <div><img src alt=""></div>
                 <p>Educativo • Grátis • há 8 anos</p>
-                <a href="https://play.google.com/store/apps/details?id=com.GamaCompany.GamaMath&pcampaignid=web_share"><img src="img/googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.GamaCompany.GamaMath&pcampaignid=web_share"><img src="googleplay.png"></a>
             </div>
             <div class="game-card">
                 <img src="eg.png" alt="Elementos Geométricos">
                 <h3>Elementos Geométricos</h3>
                 <p>Educativo • Grátis • há 8 anos</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.ElementosGeometricosria&pcampaignid=web_share"><img src="img/googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.ElementosGeometricosria&pcampaignid=web_share"><img src="googleplay.png"></a>
             </div>
             <div class="game-card">
                 <img src="ov.jpg" alt="Oxe e as Vogais">
                 <h3>Oxe e as Vogais</h3>
                 <div><img src alt=""></div>
                 <p>Educativo • Grátis • há 8 anos</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.OXE&pcampaignid=web_share"><img src="img/googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.OXE&pcampaignid=web_share"><img src="googleplay.png"></a>
             </div>
         </div>
     </main>
