--- a/index.html
+++ b/index.html
@@ -3,108 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jogos Educativos - IF Baiano</title>
+    <title>
+        JOGOS IF BAIANO - Jogos Educativos
+    </title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <div class="header-container">
-            <img src="logo.png" alt="Logo GEJiF" class="logo">
+            <img src="logo.png" alt="Logo GEJiF" class="logo" style="height: 50px;">
             <h1>JOGOS IF BAIANO</h1>
-            <input type="text" placeholder="Pesquisar..." class="search-bar" aria-label="Barra de Pesquisa">
+            <input type="text" placeholder="Pesquisar..." class="search-bar">
         </div>
     </header>
     
     <main>
-        <section class="game-list">
-            <article class="game-card">
-                <img src="dg.jpg" alt="Dalton's Game - Jogo Educativo para aprendizado de cores">
+        <div class="game-list">
+            <div class="game-card">
+                <img src="dg.jpg" alt="Dalton's Game">
                 <h3>Dalton's Game</h3>
+                <div><img src alt=""></div>
                 <p>Educativo • Grátis • há 3 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.Shooter.DaltonsGame&pcampaignid=web_share">
-                    <img src="googleplay.png" alt="Baixe Dalton's Game no Google Play">
-                </a>
-            </article>
-
-            <article class="game-card">
-                <img src="mmn.png" alt="Milenyum Math Navigator - Jogo Educativo de Matemática">
+                <a href="https://play.google.com/store/apps/details?id=com.Shooter.DaltonsGame&pcampaignid=web_share"><img src="googleplay.png"></a>
+            </div>
+            <div class="game-card">
+                <img src="mmn.png" alt="Milenyum Math Navigator">
                 <h3>Milenyum Math Navigator</h3>
                 <p>Educativo • Grátis • há 3 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MilenyumMathNavigator&pcampaignid=web_share">
-                    <img src="googleplay.png" alt="Baixe Milenyum Math Navigator no Google Play">
-                </a>
-            </article>
-
-            <article class="game-card">
-                <img src="gss.png" alt="Geometric Shapes In Space - Jogo Educativo sobre Formas Geométricas">
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MilenyumMathNavigator&pcampaignid=web_share"><img src="googleplay.png"></a>
+            </div>
+            <div class="game-card">
+                <img src="gss.png" alt="Geometric Shapes In Space">
                 <h3>Geometric Shapes In Space</h3>
                 <p>Educativo • Grátis • há 3 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.GeometricShapesInSpace&pcampaignid=web_share">
-                    <img src="googleplay.png" alt="Baixe Geometric Shapes In Space no Google Play">
-                </a>
-            </article>
-
-            <article class="game-card">
-                <img src="njs.jpg" alt="Neon - Jogo de Soma - Jogo Educativo de Soma de Números">
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.GeometricShapesInSpace&pcampaignid=web_share"><img src="googleplay.png"></a>
+            </div>
+            <div class="game-card">
+                <img src="njs.jpg" alt="Neon - Jogo de Soma">
                 <h3>Neon - Jogo de Soma</h3>
                 <p>Educativo • Grátis • há 4 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share">
-                    <img src="googleplay.png" alt="Baixe Neon - Jogo de Soma no Google Play">
-                </a>
-            </article>
-
-            <article class="game-card">
-                <img src="ne.png" alt="Números nas Estrelas - Jogo Educativo de Reconhecimento Numérico">
+                <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share"><img src="googleplay.png"></a>
+            </div>
+            <div class="game-card">
+                <img src="ne.png" alt="Números nas Estrelas">
                 <h3>Números nas Estrelas</h3>
                 <p>Educativo • Grátis • há 4 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.NUMEROSNASESTRELAS&pcampaignid=web_share">
-                    <img src="googleplay.png" alt="Baixe Números nas Estrelas no Google Play">
-                </a>
-            </article>
-
-            <article class="game-card">
-                <img src="gm.png" alt="GamaMath - Jogo Educativo de Matemática para Conceitos Avançados">
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.NUMEROSNASESTRELAS&pcampaignid=web_share"><img src="googleplay.png"></a>
+            </div>
+            <div class="game-card">
+                <img src="gm.png" alt="GamaMath">
                 <h3>GamaMath</h3>
+                <div><img src alt=""></div>
                 <p>Educativo • Grátis • há 8 anos</p>
-                <a href="https://play.google.com/store/apps/details?id=com.GamaCompany.GamaMath&pcampaignid=web_share">
-                    <img src="googleplay.png" alt="Baixe GamaMath no Google Play">
-                </a>
-            </article>
-
-            <article class="game-card">
-                <img src="eg.png" alt="Elementos Geométricos - Jogo Educativo sobre Geometria">
+                <a href="https://play.google.com/store/apps/details?id=com.GamaCompany.GamaMath&pcampaignid=web_share"><img src="googleplay.png"></a>
+            </div>
+            <div class="game-card">
+                <img src="eg.png" alt="Elementos Geométricos">
                 <h3>Elementos Geométricos</h3>
                 <p>Educativo • Grátis • há 8 anos</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.ElementosGeometricosria&pcampaignid=web_share">
-                    <img src="googleplay.png" alt="Baixe Elementos Geométricos no Google Play">
-                </a>
-            </article>
-
-            <article class="game-card">
-                <img src="ov.jpg" alt="Oxe e as Vogais - Jogo Educativo sobre Vogais">
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.ElementosGeometricosria&pcampaignid=web_share"><img src="googleplay.png"></a>
+            </div>
+            <div class="game-card">
+                <img src="ov.jpg" alt="Oxe e as Vogais">
                 <h3>Oxe e as Vogais</h3>
+                <div><img src alt=""></div>
                 <p>Educativo • Grátis • há 8 anos</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.OXE&pcampaignid=web_share">
-                    <img src="googleplay.png" alt="Baixe Oxe e as Vogais no Google Play">
-                </a>
-            </article>
-        </section>
-
-        <section class="social-links">
-            <h3 style="text-align: center;">Grupo de Estudo de Jogos</h3>
-            <ul>
-                <li>
-                    <a href="https://www.instagram.com/gejif_ifbaiano">
-                        <img src="instagramlogo.png" width="30" height="30" alt="Instagram do Grupo GEJiF">
-                    </a>
-                </li>
-            </ul>
-        </section>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.OXE&pcampaignid=web_share"><img src="googleplay.png"></a>
+            </div>
+        </div>
     </main>
 
-    <footer>
-        <small>&copy; 2024 GEJiF. Todos os direitos reservados.</small>
-    </footer>
+    
+<ol>
+    <h3 style="text-align: center;">Grupo de Estudo de Jogos </h3>
+  <li>
+    <a href="https://www.instagram.com/gejif_ifbaiano">
+      <img src="instagramlogo.png" width="30" height="30" alt="Instagram">
+    </a>
+  </li>
+</ol>   
+
+
+  <footer>
+    <small>
+      Copyright © 2024 GEJiF. Todos os direitos reservados.
+    </small>
+  </footer>
 
     <script src="script.js"></script>
 </body>
