--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
     
 <ol>
     <h3 style="text-align: center;">Grupo de Estudo de Jogos </h3>
-  <li>
-    <a href="https://www.instagram.com/gejif_ifbaiano">
-      <img src="instagramlogo.png" width="30" height="30" alt="Instagram">
-    </a>
-  </li>
-</ol>   
+</ol>
+    <div class="instagram-container">
+        <a href="https://www.instagram.com/gejif_ifbaiano">
+            <img src="instagramlogo.png" alt="Instagram do GEJiF">
+        </a>
+    </div>
 
 
   <footer>
