--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header-container">
             <img src="logo.png" alt="Logo GEJiF" class="logo" style="height: 50px;">
             <h1>JOGOS IF BAIANO</h1>
-            <input type="text" placeholder="Pesquisar..." class="search-bar">
+            <input type="text" placeholder="Pesquisar um jogo" class="search-bar">
         </div>
     </header>
     
