--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <div class="header-container">
-            <img src="logo.png" alt="Logo GEJiF" class="logo" style="height: 50px;">
+            <img src="logos/logo.png" alt="Logo GEJiF" class="logo" style="height: 50px;">
             <h1>JOGOS IF BAIANO</h1>
             <input type="text" placeholder="Pesquisar um jogo" class="search-bar">
         </div>
@@ -20,52 +20,52 @@
     <main>
         <div class="game-list">
             <div class="game-card">
-                <img src="dg.jpg" alt="Dalton's Game">
+                <img src="logos/dg.jpg" alt="Dalton's Game">
                 <h3>Dalton's Game</h3>
                 <p>Educativo • Grátis • há 3 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.Shooter.DaltonsGame&pcampaignid=web_share"><img src="googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.Shooter.DaltonsGame&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="mmn.png" alt="Milenyum Math Navigator">
+                <img src="logos/mmn.png" alt="Milenyum Math Navigator">
                 <h3>Milenyum Math Navigator</h3>
                 <p>Educativo • Grátis • há 3 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MilenyumMathNavigator&pcampaignid=web_share"><img src="googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MilenyumMathNavigator&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="gss.png" alt="Geometric Shapes In Space">
+                <img src="logos/gss.png" alt="Geometric Shapes In Space">
                 <h3>Geometric Shapes In Space</h3>
                 <p>Educativo • Grátis • há 3 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.GeometricShapesInSpace&pcampaignid=web_share"><img src="googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.GeometricShapesInSpace&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="njs.jpg" alt="Neon - Jogo de Soma">
+                <img src="logos/njs.jpg" alt="Neon - Jogo de Soma">
                 <h3>Neon - Jogo de Soma</h3>
                 <p>Educativo • Grátis • há 4 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share"><img src="googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="ne.png" alt="Números nas Estrelas">
+                <img src="logos/ne.png" alt="Números nas Estrelas">
                 <h3>Números nas Estrelas</h3>
                 <p>Educativo • Grátis • há 4 meses</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.NUMEROSNASESTRELAS&pcampaignid=web_share"><img src="googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.NUMEROSNASESTRELAS&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="gm.png" alt="GamaMath">
+                <img src="logos/gm.png" alt="GamaMath">
                 <h3>GamaMath</h3>
                 <p>Educativo • Grátis • há 8 anos</p>
-                <a href="https://play.google.com/store/apps/details?id=com.GamaCompany.GamaMath&pcampaignid=web_share"><img src="googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.GamaCompany.GamaMath&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="eg.png" alt="Elementos Geométricos">
+                <img src="logos/eg.png" alt="Elementos Geométricos">
                 <h3>Elementos Geométricos</h3>
                 <p>Educativo • Grátis • há 8 anos</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.ElementosGeometricosria&pcampaignid=web_share"><img src="googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.ElementosGeometricosria&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
             </div>
             <div class="game-card">
-                <img src="ov.jpg" alt="Oxe e as Vogais">
+                <img src="logos/ov.jpg" alt="Oxe e as Vogais">
                 <h3>Oxe e as Vogais</h3>
                 <p>Educativo • Grátis • há 8 anos</p>
-                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.OXE&pcampaignid=web_share"><img src="googleplay.png"></a>
+                <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.OXE&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
             </div>
         </div>
     </main>
@@ -76,7 +76,7 @@
 </ol>
     <div class="instagram-container">
         <a href="https://www.instagram.com/gejif_ifbaiano">
-            <img src="instagramlogo.png" alt="Instagram do GEJiF">
+            <img src="logos/instagramlogo.png" alt="Instagram do GEJiF">
         </a>
     </div>
 
