--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <p>Grátis</p>
                 <p>há <span class="release-time" data-release="2024-08-07"></span></p>
                 <h6>Requisitos mínimos:</h6>
-                <h7></h7><p>Android 12 ou superior</p></h7>
+                <h7>Android 12 ou superior!</h7><p>Android 12 ou superior</p>
                 <br>
                 <a href="https://play.google.com/store/apps/details?id=com.Shooter.DaltonsGame&pcampaignid=web_share"><img src="logos/googleplay.png" alt="Google Play Store"></a>
             </div>
