--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <p>Educativo</p>
                 <p>Grátis</p>
                 <p>há <span class="release-time" data-release="2024-08-07"></span></p>
-                <h6>Requisitos mínimos:</h6>
-                <h7>Android 12 ou superior!</h7><p>Android 12 ou superior</p>
+                <h5>Requisitos mínimos:</h5>
+                <p>Android 12 ou superior</p>
                 <br>
                 <a href="https://play.google.com/store/apps/details?id=com.Shooter.DaltonsGame&pcampaignid=web_share"><img src="logos/googleplay.png" alt="Google Play Store"></a>
             </div>
@@ -39,7 +39,7 @@
                 <p>Educativo</p>
                 <p>Grátis</p>
                 <p>há <span class="release-time" data-release="2024-08-04"></span></p>
-                <h4>Requisitos mínimos:</h4>
+                <h5>Requisitos mínimos:</h5>
                 <p>Android 12 ou superior</p>
                 <br>
                 <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MilenyumMathNavigator&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
@@ -50,7 +50,7 @@
                 <p>Educativo</p>
                 <p>Grátis</p>
                 <p>há <span class="release-time" data-release="2024-08-01"></span></p>
-                <h4>Requisitos mínimos:</h4>
+                <h5>Requisitos mínimos:</h5>
                 <p>Android 12 ou superior</p>
                 <br>
                 <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.GeometricShapesInSpace&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
@@ -61,7 +61,7 @@
                 <p>Educativo</p>
                 <p>Grátis</p>
                 <p>há <span class="release-time" data-release="2024-07-31"></span></p>
-                <h4>Requisitos mínimos:</h4>
+                <h5>Requisitos mínimos:</h5>
                 <p>Android 12 ou superior</p>
                 <br>
                 <a href="https://play.google.com/store/apps/details?id=com.IFbaiamo.NeonJogodesoma&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
@@ -72,7 +72,7 @@
                 <p>Educativo</p>
                 <p>Grátis</p>
                 <p>há <span class="release-time" data-release="2024-07-23"></span></p>
-                <h4>Requisitos mínimos:</h4>
+                <h5>Requisitos mínimos:</h5>
                 <p>Android 12 ou superior</p>
                 <br>
                 <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.NUMEROSNASESTRELAS&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
@@ -83,7 +83,7 @@
                 <p>Educativo</p>
                 <p>Grátis</p>
                 <p>há <span class="release-time" data-release="2017-03-10"></span></p>
-                <h4>Requisitos mínimos:</h4>
+                <h5>Requisitos mínimos:</h5>
                 <p>Android 2.3 ou superior</p>
                 <br>
                 <a href="https://play.google.com/store/apps/details?id=com.GamaCompany.GamaMath&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
@@ -94,7 +94,7 @@
                 <p>Educativo</p>
                 <p>Grátis</p>
                 <p>há <span class="release-time" data-release="2017-03-09"></span></p>
-                <h4>Requisitos mínimos:</h4>
+                <h5>Requisitos mínimos:</h5>
                 <p>Android 2.3 ou superior</p>
                 <br>
                 <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.ElementosGeometricosria&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
@@ -105,7 +105,7 @@
                 <p>Educativo</p>
                 <p>Grátis</p>
                 <p>há <span class="release-time" data-release="2017-03-09"></span></p>
-                <h4>Requisitos mínimos:</h4>
+                <h5>Requisitos mínimos:</h5>
                 <p>Android 2.3 ou superior</p>
                 <br>
                 <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.OXE&pcampaignid=web_share"><img src="logos/googleplay.png"></a>
