--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
         <br>
-        <h1>Disponiveis na Google Play Store</h1>
+        <h1>Em breve, o catálogo do GEJiF estará de cara nova!</h1>
         <br>
         <div class="game-list">
             <div class="game-card">
