--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Seção Comemorativa de Ano Novo -->
     <section class="ano-novo" id="ano-novo">
         <div class="ano-novo-container">
-            <h1 class="ano-novo-mensagem">Feliz Ano Novo 2025! 🎉</h1>
+            <h1 class="ano-novo-mensagem">Feliz Ano Novo! Olá, 2025! 🎉</h1>
             <p class="ano-novo-detalhes">Que este novo ano seja repleto de jogos incríveis e muita diversão! 🕹️✨</p>
             <button class="ano-novo-botao" onclick="estourarFogos()">Estourar Fogos!</button>
             <canvas id="fogosCanvas"></canvas>
@@ -476,11 +476,7 @@
         </div>
     </section>
 
-    <div class="overlay" id="overlay"></div>
-    <div class="popup" id="popup">
-        <button class="close-btn" id="closePopup">X</button>
-        <p>Aplicativo indisponível!</p>
-    </div>
+  
 
 
     <div class="end-text">
