--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </div>
     </section>
     <!-- Seção Comemorativa de Ano Novo -->
+    <button id="scrollToTop" title="Voltar ao topo">⬆</button>
 
 
     <section class="main-home box-height" id="home-up">
@@ -476,7 +477,7 @@
         </div>
     </section>
 
-  
+
 
 
     <div class="end-text">
