--- a/index.html
+++ b/index.html
@@ -24,16 +24,21 @@
 
         <a href="#" class="logo"><img src="logos/logo.png" alt="Logo GEJiF" style="height: 50px;" /></a>
         <h3>JOGOS IF BAIANO</h3>
-        <ul class="navmenu">
-            <li> <a href="#Jogos">Jogos</a></li>
-            <li> <a href="#Aplicativos">Aplicativos</a></li>
-            <li> <a href="#Lancamentos">Lançamentos</a></li>
-
-        </ul>
         <div class="nav-icon">
 
-            <input type="text" placeholder="Pesquisar um jogo" class="search-bar">
+            <input type="text" placeholder="Buscar" class="search-bar">
         </div>
+
+
+        <div class="menu">
+            <button class="menu-toggle">☰</button>
+            <ul class="menu-options">
+                <li> <a href="#Jogos">Jogos</a></li>
+                <li> <a href="#Aplicativos">Aplicativos</a></li>
+                <li> <a href="#Lancamentos">Lançamentos</a></li>
+            </ul>
+        </div>
+
     </header>
 
     <!-- Seção Comemorativa de Ano Novo -->
