--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="sticky">
 
         <a href="#" class="logo"><img src="logos/logo.png" alt="Logo GEJiF" style="height: 50px;" /></a>
-        <h3>JOGOS IF BAIANO</h3>
+        <h3>GEJiF</h3>
         <div class="nav-icon">
 
             <input type="text" placeholder="Buscar" class="search-bar">
