--- a/index.html
+++ b/index.html
@@ -166,6 +166,17 @@
             <br>
             <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.PECAPORPECA&pcampaignid=web_share"><img src="logos/googleplay.png" alt="Google Play Store"></a>
         </div>
+        <div class="game-card">
+            <img src="logos/ma.webp" alt="MathAttack">
+            <h3>MathAttack</h3>
+            <p>Educativo</p>
+            <p>Grátis</p>
+            <p>há <span class="release-time" data-release="2024-12-16"></span></p>
+            <h5>Requisitos mínimos:</h5>
+            <p>Android 15 ou superior</p>
+            <br>
+            <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MathAttack&pcampaignid=web_share"><img src="logos/googleplay.png" alt="Google Play Store"></a>
+        </div>
         <!-- FIM NOVOS -->
         <div class="game-card">
             <img src="logos/dg.jpg" alt="Dalton's Game">
@@ -306,6 +317,17 @@
             <p>Android 15 ou superior</p>
             <br>
             <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.PECAPORPECA&pcampaignid=web_share"><img src="logos/googleplay.png" alt="Google Play Store"></a>
+        </div>
+        <div class="game-card">
+            <img src="logos/ma.webp" alt="MathAttack">
+            <h3>MathAttack</h3>
+            <p>Educativo</p>
+            <p>Grátis</p>
+            <p>há <span class="release-time" data-release="2024-12-16"></span></p>
+            <h5>Requisitos mínimos:</h5>
+            <p>Android 15 ou superior</p>
+            <br>
+            <a href="https://play.google.com/store/apps/details?id=com.IFBAIANO.MathAttack&pcampaignid=web_share"><img src="logos/googleplay.png" alt="Google Play Store"></a>
         </div>
         <div class="game-card">
             <img src="logos/dg.jpg" alt="Dalton's Game">
@@ -662,5 +684,6 @@
     <!-- FIM FOOTER -->
 
     <script src="./script.js"></script>
+
 </body>
 </html>
