--- a/index.html
+++ b/index.html
@@ -32,15 +32,26 @@
                 <h3>Fuga de Marte</h3>
                 <p>Educativo</p>
                 <p>Grátis</p>
-                <p>há <span class="release-time" data-release="2024-12-13"></span></p>
-                <h5>Requisitos mínimos:</h5>
-                <p>Android 15 ou superior</p>
+                <h5>Observações:</h5>
+                <p>Iluminação ativada</p>
                 <br>
                 <a href="https://1drv.ms/u/c/823afd009c784c7e/EdFgKljugMlDgkfl9OYYKU4B3Pfe40QMrj7CvQFeVh-ZKg?e=DFT2pr"><img src="logos/download.png" alt="Google Play Store"></a>
+            </div>
+
+            <div class="game-card">
+                <img src="logos/fm.webp" alt="Fuga de Marte">
+                <h3>Fuga de Marte</h3>
+                <p>Educativo</p>
+                <p>Grátis</p>
+                <h5>Observações:</h5>
+                <p>Iluminação desativada</p>
+                <br>
+                <a href="https://1drv.ms/u/c/823afd009c784c7e/EbMDZgdDaKpBp6amvU5PPK4BFNfV5aHi9qZVHpC9OcGNhg?e=XCafh1"><img src="logos/download.png" alt="Google Play Store"></a>
             </div>
             <div class="apps-grid" id="apps-grid">
             </div>
         </div>
+
 
 
 
